# ShubaTapoChan

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agent/handoff/: 2026-04-17-1114.md  HANDOFF.md
.agent/memory/: MEMORY.md
.references/: Audio実装方法.md
.spec/: KNOWLEDGE.md  PLAN.md  SPEC.md  TODO.md
config/: go2rtc.yaml.template
personas/: README.md  subaru.yaml
scripts/: mac_runner.sh  mac_runner_local_mic.sh  setup_go2rtc.sh  setup_gpu.sh  smoke_asr.py  smoke_llm.py  smoke_pytapo.py  smoke_rtsp.sh  smoke_tts.py
src/shubatapo/: __init__.py  config.py
src/shubatapo/asr/: __init__.py  base.py  dedup.py  vad.py  wav2vec2_client.py  whisper_client.py
src/shubatapo/audio/: __init__.py  rtsp_reader.py  stdin_reader.py  tapo_speaker.py
src/shubatapo/dialog/: __init__.py  fillers.py  partials.py  text_loop.py  voice_loop.py
src/shubatapo/llm/: __init__.py  base.py  claude_client.py  claude_code_client.py  factory.py
src/shubatapo/persona/: __init__.py  loader.py
src/shubatapo/tts/: __init__.py  base.py  subaru_client.py
